# repositorio

./: README.md  index.html  pyproject.toml
data/raw/: exercicios.csv
docs/: mkdocs.yml
docs/docs/: git.md  index.md
git/: index.html
notebooks/: projeto_ds.ipynb
search/: search_index.json
